--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href=".">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="/pages/blog.html">Blog</a></li>
             <!-- <li>Teams</li> -->
             <li><a href="/pages/about.html">About Us</a></li>
@@ -132,7 +132,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href=".">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="/pages/blog.html">Blog</a></li>
             <!-- <li>Teams</li> -->
             <li><a href="/pages/about.html">About Us</a></li>
