--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/styles/main.css" />
-    <link rel="stylesheet" href="/styles/blog.css" />
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/blog.css" />
   </head>
   <body>
     <header>
