--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/main.css" />
+    <link rel="stylesheet" href="../styles/contact.css" />
   </head>
   <body>
     <header>
@@ -15,11 +15,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="/pages/blog.html">Blog</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./blog.html">Blog</a></li>
             <!-- <li>Teams</li> -->
-            <li><a href="/pages/about.html">About Us</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="./about.html">About Us</a></li>
+            <li><a href="./contact.html">Contact</a></li>
             <a href="" class="btn">Click Here</a>
           </ul>
         </nav>
@@ -75,11 +75,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="/pages/blog.html">Blog</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./blog.html">Blog</a></li>
             <!-- <li>Teams</li> -->
-            <li><a href="/pages/about.html">About Us</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="./about.html">About Us</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
