--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,11 +15,12 @@
         </div>
         <nav>
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="/pages/blog.html">Blog</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./blog.html">Blog</a></li>
             <!-- <li>Teams</li> -->
-            <li><a href="/pages/about.html">About Us</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="./about.html">About Us</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <a href="" class="btn">Click Here</a>
           </ul>
         </nav>
       </div>
@@ -306,12 +307,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="/pages/blog.html">Blog</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./blog.html">Blog</a></li>
             <!-- <li>Teams</li> -->
-            <li><a href="/pages/about.html">About Us</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
-            <a href="" class="btn">Click Here</a>
+            <li><a href="./about.html">About Us</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
