--- a/index.html
+++ b/index.html
@@ -333,10 +333,10 @@
         <nav>
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="pages/blog.html">Blog</a></li>
+            <li><a href="/pages/blog.html">Blog</a></li>
             <!-- <li>Teams</li> -->
-            <li><a href="pages/about.html">About Us</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="/pages/about.html">About Us</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
